--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.registerloginexample">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.registerloginexample"
+    tools:ignore="UniquePermission">
 
+    <uses-permission android:name="android.hardware.bluetooth" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.name.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.name.ACCESS_FINE_LOCATION" />
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <permission android:name="android.permission.BLUETOOTH" android:label="BLUETOOTH" />
+    <permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <permission android:name="android.name.ACCESS_FINE_LOCATION" />
+    <permission android:name="android.name.ACCESS_COARSE_LOCATION" />
+
 
     <application
         android:allowBackup="true"
